learned fixed position and vertical-align: middle

--- a/source/main.css
+++ b/source/main.css
@@ -1,5 +1,10 @@
 .top-nav h1 {
-    font-size: 32px;
+    float: left;
+    margin: 0;
+    padding: 0;
+    line-height: 60px;
+    color: white;
+    vertical-align: middle;
 }
 
 .container {
@@ -7,21 +12,39 @@
     width: 400px;
 }
 
-p {
-    font-family: Georgia, serif;
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 8px;
+body{
+    margin: 80px 0 0 0;
 }
 
-h1, h2, h3 {
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
+.top-nav {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    background-color: black;
 }
 
+.top-nav .container{
+    width: 400px;
+    height: 60px;
+    margin: 0 auto;
+}
 
-h2 {
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 48px;
+.nav{
+    float: left;
+    width: 200px;
+    list-style-type: none;
+}
+
+.nav li a{
+    float: left;
+    width: 40px;
+    margin: 0 10px;
+    padding: 0px;
+    line-height: 30px;
+    color: white;
+}
+
+.content {
+    clear: left;
 }
